# webui-juce-llama-chatbot-example

./: CMakeLists.txt  LICENSE  README.md
models/: README.md
src/: HTTPServer.cpp  HTTPServer.h  LLMController.cpp  LLMController.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PromptProcessingThread.cpp  PromptProcessingThread.h  StringQueue.cpp  StringQueue.h  Utils.h
src/tests/: model-tester.cpp  unit-tests.cpp
src/ui/: index.html  index.htmlNEW  index_webgl_example.html
